feat: Implementar RFC 7807 (Problem Details), Status 200 para idempotência, Lambda Authorizer e API Gateway